@@ -1,4 +1,4 @@
-.TH VIFM 1 "6 October 2024" "vifm 0.13"
+.TH VIFM 1 "9 October 2024" "vifm 0.13"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2267,6 +2267,7 @@ their content (e.g. regular files in views)
  \- ErrorMsg \- color of error messages in the status bar
  \- StatusLine \- color of the line above the status bar
  \- JobLine \- color of job line that appears above the status line
+ \- WildBox \- color of the wild menu
  \- WildMenu \- color of the selected wild menu item
  \- SuggestBox \- color of key suggestion box
  \- CurrLine \- line at cursor position in active view
@@ -2449,7 +2450,8 @@ transparency:
   JobLine
   SuggestBox
   StatusLine
-    WildMenu
+    WildBox
+      WildMenu
     User1..User20
   Border
   CmdLine
@@ -7577,8 +7579,8 @@ this way:
 .RS 2
 .IP \- 2
 Border, TabLine, TabLineSel, TopLineSel, TopLine, CmdLine, ErrorMsg, \
-StatusLine, JobLine, SuggestBox and WildMenu are always determined by the \
-primary color scheme;
+StatusLine, JobLine, SuggestBox, WildBox and WildMenu are always determined by \
+the primary color scheme;
 .IP \- 2
 CurrLine, Selected, Directory, Link, BrokenLink, Socket, Device, Executable, \
 Fifo, CmpMismatch, CmpUnmatched, CmpBlank, Win, AuxWin and OtherWin are \
