@@ -1513,8 +1513,13 @@ draw_wild_bar(int *last_pos, int *pos, int *len)
 	}
 
 	col_attr_t wild_box_col = cfg.cs.color[STATUS_LINE_COLOR];
+	cs_mix_colors(&wild_box_col, &cfg.cs.color[WILD_BOX_COLOR]);
 	int wild_box_pair = cs_load_color(&wild_box_col);
 	ui_set_attr(stat_win, &wild_box_col, wild_box_pair);
+
+	/* Clear background where there are no completion items. */
+	ui_set_bg(stat_win, &wild_box_col, wild_box_pair);
+	werase(stat_win);
 
 	for(i = *last_pos; i < count && *len > 0; ++i)
 	{
@@ -1575,8 +1580,11 @@ draw_wild_popup(int *last_pos, int *pos, int *len)
 
 	ui_stat_reposition(getmaxy(status_bar), height);
 	wresize(stat_win, height, getmaxx(stdscr));
-	ui_set_attr(stat_win, &cfg.cs.color[STATUS_LINE_COLOR],
-			cfg.cs.pair[STATUS_LINE_COLOR]);
+
+	col_attr_t wild_box_col = cfg.cs.color[STATUS_LINE_COLOR];
+	cs_mix_colors(&wild_box_col, &cfg.cs.color[WILD_BOX_COLOR]);
+	ui_set_attr(stat_win, &wild_box_col, /*pair=*/-1);
+
 	werase(stat_win);
 
 	max_title_width = 0U;
@@ -1596,9 +1604,9 @@ draw_wild_popup(int *last_pos, int *pos, int *len)
 	{
 		if(i == *pos)
 		{
-			col_attr_t col = cfg.cs.color[STATUS_LINE_COLOR];
+			col_attr_t col = wild_box_col;
 			cs_mix_colors(&col, &cfg.cs.color[WILD_MENU_COLOR]);
-			ui_set_attr(stat_win, &col, -1);
+			ui_set_attr(stat_win, &col, /*pair=*/-1);
 		}
 
 		checked_wmove(stat_win, j, 0);
@@ -1608,8 +1616,7 @@ draw_wild_popup(int *last_pos, int *pos, int *len)
 
 		if(i == *pos)
 		{
-			ui_set_attr(stat_win, &cfg.cs.color[STATUS_LINE_COLOR],
-					cfg.cs.pair[STATUS_LINE_COLOR]);
+			ui_set_attr(stat_win, &wild_box_col, /*pair=*/-1);
 			*pos = -*pos;
 		}
 	}
