@@ -64,6 +64,7 @@ char *HI_GROUPS[] = {
 	[TOP_LINE_COLOR]     = "TopLine",
 	[TOP_LINE_SEL_COLOR] = "TopLineSel",
 	[STATUS_LINE_COLOR]  = "StatusLine",
+	[WILD_BOX_COLOR]     = "WildBox",
 	[WILD_MENU_COLOR]    = "WildMenu",
 	[CMD_LINE_COLOR]     = "CmdLine",
 	[ERROR_MSG_COLOR]    = "ErrorMsg",
@@ -118,6 +119,7 @@ const char *HI_GROUPS_DESCR[] = {
 	[TOP_LINE_COLOR]     = "base top line highlight",
 	[TOP_LINE_SEL_COLOR] = "active window title",
 	[STATUS_LINE_COLOR]  = "status line",
+	[WILD_BOX_COLOR]     = "completion window",
 	[WILD_MENU_COLOR]    = "current completion item",
 	[CMD_LINE_COLOR]     = "status/command-line bar",
 	[ERROR_MSG_COLOR]    = "error message",
@@ -488,6 +490,7 @@ static const col_attr_t default_cs[] = {
 	[TOP_LINE_COLOR]     = { COLOR_BLACK,   COLOR_WHITE, 0                       },
 	[TOP_LINE_SEL_COLOR] = { COLOR_BLACK,   -1,          A_BOLD                  },
 	[STATUS_LINE_COLOR]  = { COLOR_BLACK,   COLOR_WHITE, A_BOLD                  },
+	[WILD_BOX_COLOR]     = { -1,            -1,          -1                      },
 	[WILD_MENU_COLOR]    = { COLOR_WHITE,   COLOR_BLACK, A_UNDERLINE | A_REVERSE },
 	[CMD_LINE_COLOR]     = { COLOR_WHITE,   COLOR_BLACK, 0                       },
 	[ERROR_MSG_COLOR]    = { COLOR_RED,     COLOR_BLACK, 0                       },
